--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.tableWrapper{
+  width: 100%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +37,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+ 
+*{
+  transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .tableWrapper{
+  }
+  
 }
