--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.hoverSoft:hover{
+  opacity: 0.5;
+   cursor: pointer;
+}
+
+.smFont{
+  font-size: 12px;
+}
+
